--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,6 +1,6 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA autocorrelation compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_GEVP_gparity fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sigma_sim_gparity_pboot fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_multiop_comoving_GEVP_gparity fit_pipi_multiop_comoving_gparity fit_pipi_sigma_GEVP_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA fit_simultaneous gaussian_jackknife global_fit hdf5_calc hdf5_combine hdf5_print hdf5_superjackknife_boost plot_pipi_phaseshift plot_pipi_phaseshift_sdep pvalue
+bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA autocorrelation compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_GEVP_gparity fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sigma_sim_gparity_pboot fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_multiop_comoving_GEVP_gparity fit_pipi_multiop_comoving_gparity fit_pipi_sigma_GEVP_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple_bootstrap fit_simple fit_simple_sampleAMA fit_simultaneous gaussian_jackknife global_fit hdf5_calc hdf5_combine hdf5_print hdf5_superjackknife_boost plot_pipi_phaseshift plot_pipi_phaseshift_sdep pvalue
 analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
 analyze_ktopipi_mixdiags_sampleAMA_SOURCES = analyze_ktopipi_mixdiags_sampleAMA.C
 autocorrelation_SOURCES = autocorrelation.C
@@ -34,6 +34,7 @@ fit_pipitosigma_gparity_SOURCES = fit_pipitosigma_gparity.C
 fit_resampled_results_SOURCES = fit_resampled_results.C
 fit_sigmasigma_gparity_SOURCES = fit_sigmasigma_gparity.C
 fit_simple_AMA_SOURCES = fit_simple_AMA.C
+fit_simple_bootstrap_SOURCES = fit_simple_bootstrap.C
 fit_simple_SOURCES = fit_simple.C
 fit_simple_sampleAMA_SOURCES = fit_simple_sampleAMA.C
 fit_simultaneous_SOURCES = fit_simultaneous.C
