--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,10 +1,11 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-test_PROGRAMS = benchmark test_block_doublejackknife test_boot_jackknife test_boundedfit test_ET test_expression_parse test_gsl_min test_gsl_multidim_min test_hdf5 test_Luscher_zeta test_minuit2_min test_parsers test_simple_fit_wrapper_bootstrap test_simple_fit_wrapper test_supermulti test_tensor
+test_PROGRAMS = benchmark test_block_doublejackknife test_boot_jackknife test_boundedfit test_deltaS1_Wilson_coeffs test_ET test_expression_parse test_gsl_min test_gsl_multidim_min test_hdf5 test_Luscher_zeta test_minuit2_min test_parsers test_simple_fit_wrapper_bootstrap test_simple_fit_wrapper test_supermulti test_tensor
 benchmark_SOURCES = benchmark.C
 test_block_doublejackknife_SOURCES = test_block_doublejackknife.C
 test_boot_jackknife_SOURCES = test_boot_jackknife.C
 test_boundedfit_SOURCES = test_boundedfit.C
+test_deltaS1_Wilson_coeffs_SOURCES = test_deltaS1_Wilson_coeffs.C
 test_ET_SOURCES = test_ET.C
 test_expression_parse_SOURCES = test_expression_parse.C
 test_gsl_min_SOURCES = test_gsl_min.C
