--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,6 +1,6 @@
 exampledir = $(prefix)/example
 testdir = $(prefix)/test
-test_PROGRAMS = benchmark test_block_doublejackknife test_boot_jackknife test_boundedfit test_deltaS1_Wilson_coeffs test_ET test_expression_parse test_gsl_min test_gsl_multidim_min test_hdf5 test_Luscher_zeta test_minuit2_min test_parsers test_simple_fit_wrapper_bootstrap test_simple_fit_wrapper test_supermulti test_tensor
+test_PROGRAMS = benchmark test_block_doublejackknife test_boot_jackknife test_boundedfit test_deltaS1_Wilson_coeffs test_ET test_expression_parse test_gsl_min test_gsl_multidim_min test_hdf5 test_Luscher_zeta test_minuit2_min test_parsers test_simple_fit_wrapper_bootstrap test_simple_fit_wrapper test_supermulti test_template_wizardry test_tensor test_distribution_utils test_gsl_GEVP
 benchmark_SOURCES = benchmark.C
 test_block_doublejackknife_SOURCES = test_block_doublejackknife.C
 test_boot_jackknife_SOURCES = test_boot_jackknife.C
@@ -10,6 +10,7 @@ test_ET_SOURCES = test_ET.C
 test_expression_parse_SOURCES = test_expression_parse.C
 test_gsl_min_SOURCES = test_gsl_min.C
 test_gsl_multidim_min_SOURCES = test_gsl_multidim_min.C
+test_gsl_GEVP_SOURCES = test_gsl_GEVP.C
 test_hdf5_SOURCES = test_hdf5.C
 test_Luscher_zeta_SOURCES = test_Luscher_zeta.C
 test_minuit2_min_SOURCES = test_minuit2_min.C
@@ -17,6 +18,8 @@ test_parsers_SOURCES = test_parsers.C
 test_simple_fit_wrapper_bootstrap_SOURCES = test_simple_fit_wrapper_bootstrap.C
 test_simple_fit_wrapper_SOURCES = test_simple_fit_wrapper.C
 test_supermulti_SOURCES = test_supermulti.C
+test_template_wizardry_SOURCES = test_template_wizardry.C
 test_tensor_SOURCES = test_tensor.C
+test_distribution_utils_SOURCES = test_distribution_utils.C
 AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
 LDADD =../src/libcpsfit.a
